--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -65,20 +65,20 @@ services:
   #     ACCEPT_EULA: "Y" # Accept the SQL Server End-User License Agreement
   #     MSSQL_PID: "Developer" # Specify the SQL Server edition
 
-  mssql:
-    build:
-      context: ./config/mssql
-      dockerfile: Dockerfile
-    container_name: MSSQL
-    restart: always
-    ports:
-      - "1433:1433"
-    volumes:
-      - mssql-data:/var/opt/mssql
-    environment:
-      MSSQL_SA_PASSWORD: "${MSSQL_SA_PASSWORD}"
-      ACCEPT_EULA: "Y" # Accept the SQL Server End-User License Agreement
-      MSSQL_PID: "Developer" # Specify the SQL Server edition
+  # mssql:
+  #   build:
+  #     context: ./config/mssql
+  #     dockerfile: Dockerfile
+  #   container_name: MSSQL
+  #   restart: always
+  #   ports:
+  #     - "1433:1433"
+  #   volumes:
+  #     - mssql-data:/var/opt/mssql
+  #   environment:
+  #     MSSQL_SA_PASSWORD: "${MSSQL_SA_PASSWORD}"
+  #     ACCEPT_EULA: "Y" # Accept the SQL Server End-User License Agreement
+  #     MSSQL_PID: "Developer" # Specify the SQL Server edition
 
 volumes:
   mysql-data:
